--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,10 +6,15 @@
     </head>
     <body>
 
-        <form>
-            <input type="file" accept="image/jpeg, image/png" multiple />
+        <form> 
+            <label id='dropbox' for='fileInput'><img src="images/File-Upload-icon.png"/>Select photos</label>
+            <input id='fileInput' type="file" accept="image/*" multiple />
+            <input  type="submit" value="Save">
         </form>
-
+        <div class="preview">
+            <p>No files currently selected for upload</p>
+            <ul></ul>
+        </div>
         <table class="images">
             <thead>
             <th>Time</th>
@@ -22,8 +27,8 @@
 
         </tbody>
     </table>
-
-    <script src="./vendor/canvas-to-blob.min.js"></script>
+    <script src="lib/jquery-3.2.1.js"></script>
+    <!--<script src="./vendor/canvas-to-blob.min.js"></script>-->
     <script src="./resize.js"></script>
     <script src="./app.js"></script>
 </body>
