--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Resize &amp; Upload</title>
-        <link rel="stylesheet" href="./style.css" />
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css" />
+        <script data-main="js/app.js" src="js/require.js"></script>
     </head>
     <body>
-
         <form> 
             <label id='dropbox' for='fileInput'><img src="images/File-Upload-icon.png"/>Select photos</label>
             <input id='fileInput' type="file" accept="image/*" multiple />
@@ -32,4 +34,5 @@
     <script src="./resize.js"></script>
     <script src="./app.js"></script>
 </body>
+
 </html>
