--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <body>
         <form> 
             <label id='dropbox' for='fileInput'><img src="images/File-Upload-icon.png"/>Select photos</label>
+            <!--change to button-->
             <input id='fileInput' type="file" accept="image/*" multiple />
             <input  type="submit" value="Save">
         </form>
@@ -29,10 +30,6 @@
 
         </tbody>
     </table>
-    <script src="lib/jquery-3.2.1.js"></script>
-    <!--<script src="./vendor/canvas-to-blob.min.js"></script>-->
-    <script src="./resize.js"></script>
-    <script src="./app.js"></script>
 </body>
 
 </html>
