--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,8 @@
             <label id='dropbox' for='fileInput'><img src="images/File-Upload-icon.png"/>Select photos</label>
             <!--change to button-->
             <input id='fileInput' type="file" accept="image/*" multiple />
+            <p>First name:  <input type="text" name="firstName" value="John"></p>
+            <p>Last name: <input type="text" name="lastName" value="Smith"></p>
             <input  type="submit" value="Save">
         </form>
         <div class="preview">
