--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,8 +14,8 @@
                     <p>First name:  <input type="text" name="firstName" value="John"></p>
                     <p>Last name: <input type="text" name="lastName" value="Smith"></p>    
                 </div>
-                <div class="fileInputs"><label id='dropbox' for='fileInput'><img src="images/File-Upload-icon.png"/>Select photos</label>
-                    <!--change to button-->
+                <div class="fileInputs">
+                    <label id='dropbox' for='fileInput'><img src="imgs/File-Upload-icon.png"/>Select photos</label>
                     <input id='fileInput' type="file" accept="image/*" multiple />
                 </div>
                 <button type="button">Submit</button>
