--- a/src/main/webapp/indexBackbone.html
+++ b/src/main/webapp/indexBackbone.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" />
-        <script data-main="js/app.js" src="js/lib/require.js"></script>
+        <script data-main="js/appBackbone.js" src="js/lib/require.js"></script>
     </head>
     <body>
         <div class="mainContainer">
@@ -26,7 +26,7 @@
                 <ul></ul>
             </div>
             <div class="loadedImages">
-                <p>Loaded images</p>
+                <p></p>
                 <ul></ul>
             </div>
         </div>
