--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" />
-        <script data-main="js/app.js" src="js/require.js"></script>
+        <script data-main="js/app.js" src="js/lib/require.js"></script>
     </head>
     <body>
         <div class="mainContainer">
